# menu-REST-API

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
app/: celery.py  settings.py  tests.py  urls.py
menu/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
menu/management/commands/: setup_sample_data.py
menu/migrations/: 0001_initial.py  0002_alter_menu_options_alter_menu_created_at_and_more.py
menu/tests/: test_dish_api.py  test_menu_api.py  test_models.py  test_tasks.py
user/: admin.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
user/tests/: test_admin.py  test_models.py  test_user_api.py
